--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
 /data/**
-!/data/fastq
-!/data/fastq/sample1_1.fastq
-!/data/fastq/sample1_2.fastq
-!/data/fastq/sample2_1.fastq
-!/data/fastq/sample2_2.fastq
-!/data/genome
-!/data/genome/genome_download.sh
 /log/
 /results/**
-!/results/UCSCGenomeBrowser/
-!/results/UCSCGenomeBrowser/cmv/
-!/results/UCSCGenomeBrowser/cmv/**/*
-!/results/tracks/
-!/results/tracks/*_cmv_*.bw
 /processed_data/
 /.snakemake/
 /container.sif
@@ -25,3 +13,4 @@
 /.config
 /.java
 /dag.svg
+.DS_Store
